FPVTL-915: Reading file from resource folder